[package]
name = "rusty-journal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version ="0.4.23", features =["serde"]}
structopt = "0.3.26"
serde = {version = "1.0.153", features =["derive"] }
serde_json = "1.0.94"
home = "0.5.4"
anyhow = "1.0.69"
